# P10_SoftDesk

./: README.md  pyproject.toml
softdesk/: filters.py  settings.py  urls.py
softdesk/accounts/: admin.py  apps.py  models.py  serializers.py  views.py
softdesk/accounts/migrations/: 0001_initial.py  0002_contributor.py  0003_contributor_project_contributor_user.py  0004_alter_contributor_options_and_more.py  0005_alter_softuser_email.py
softdesk/projects/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
softdesk/projects/migrations/: 0001_initial.py  0002_alter_project_description_alter_project_name.py  0003_issue.py  0004_alter_issue_priority_alter_issue_status_and_more.py  0005_alter_comment_uuid.py
