[tool.poetry]
name = "softdesk"
version = "0.1.0"
description = ""
authors = ["ClaireRuysschaert <netclaire@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
djangorestframework = "^3.14.0"
black = "^24.2.0"
django-filter = "^24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
